[gd_scene load_steps=2 format=3 uid="uid://xkyk3jxwwqn1"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_5v1rw"]

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_5v1rw")

[node name="Buttons" type="Node2D" parent="."]
position = Vector2(579, 324)
metadata/_edit_lock_ = true

[node name="Button" type="Button" parent="Buttons"]
offset_left = -56.0
offset_top = -105.0
offset_right = 6.0
offset_bottom = -74.0
scale = Vector2(2.2369, 1.90703)
text = "Level 1"

[node name="Button3" type="Button" parent="Buttons"]
offset_left = -56.0
offset_top = -30.0
offset_right = 6.0
offset_bottom = 1.0
scale = Vector2(2.2369, 1.90703)
text = "Level 2"

[node name="Button4" type="Button" parent="Buttons"]
offset_left = -56.0
offset_top = 49.0
offset_right = 6.0
offset_bottom = 80.0
scale = Vector2(2.2369, 1.90703)
text = "Level 3"

[node name="Button2" type="Button" parent="Buttons"]
offset_left = -57.0
offset_top = 139.0
offset_right = 5.0
offset_bottom = 170.0
scale = Vector2(2.2369, 1.90703)
text = "Back"

[connection signal="pressed" from="Buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="." method="_on_button_2_pressed"]
